--- a/templates/download.html
+++ b/templates/download.html
@@ -3,18 +3,18 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Download</title>
-<link href="static/css/styles.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/styles.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools-yui-compressed.js"></script>
-<script type="text/javascript" src="static/js/javascript.js"></script>
+<script type="text/javascript" src="/static/js/javascript.js"></script>
 </head>
 <body>
 <div id="container">
   <div id="header">
     <h1><a href="#">Design Instruct: Clean, Classy Web Template</a></h1>
     <ul id="nav">
-      <li><a href="index.html"><span>Home</span></a></li>
-      <li><a href="introduction.html"><span>About</span></a></li>
-      <li class="current"><a href="download.html"><span>Download</span></a></li>
+      <li><a href="/"><span>Home</span></a></li>
+      <li><a href="/introduction/"><span>About</span></a></li>
+      <li class="current"><a href="/download/"><span>Download</span></a></li>
       <!--<li><a href="#portfolio"><span>Portfolio</span></a></li>-->
       <li><a href="#blog"><span>Blog</span></a></li>
       <li><a href="#contact"><span>Contact</span></a></li>
