--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,18 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>wxPython</title>
-<link href="static/css/styles.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/styles.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools-yui-compressed.js"></script>
-<script type="text/javascript" src="static/js/javascript.js"></script>
+<script type="text/javascript" src="/static/js/javascript.js"></script>
 </head>
 <body class="index">
 <div id="container">
   <div id="header">
     <h1><a href="#">Design Instruct: Clean, Classy Web Template</a></h1>
     <ul id="nav">
-      <li class="current"><a href="index.html"><span>Home</span></a></li>
-      <li><a href="introduction.html"><span>About</span></a></li>
-      <li><a href="download.html"><span>Download</span></a></li>
+      <li class="current"><a href="/"><span>Home</span></a></li>
+      <li><a href="/introduction/"><span>About</span></a></li>
+      <li><a href="/download/"><span>Download</span></a></li>
       <!--<li><a href="#portfolio"><span>Portfolio</span></a></li>-->
       <li><a href="#blog"><span>Blog</span></a></li>
       <li><a href="#contact"><span>Contact</span></a></li>
@@ -48,20 +48,20 @@
   <div id="main">
     <div id="left">
       <h2 id="left-heading">Our Services</h2>
-      <h3>Web Design</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vestibulum imperdiet hendrerit. Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper tortor a tellus ornare sed consequat diam...</p>
-      <a class="read-more" href="#readmore">Read More</a>
+      <h3>Quotes</h3>
+      <p>Here's what people are saying about wxPython...</p>
+      <a class="read-more" href="/quotes/">Read More</a>
       <h3>Identity and Branding</h3>
-      <p>Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper tortor a tellus ornare sed consequat diam elementum. Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper...</p>
-      <a class="read-more" href="#readmore">Read More</a>
+      <p>We have had a lot of questions on the newsgroup asking how to go about learning wxPython. This page gives some pointers on how to do just that.</p>
+      <a class="read-more" href="http://wiki.wxpython.org/How_to_Learn_wxPython">Read More</a>
       <h3>Search Engine Optimization</h3>
       <p>Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper tortor a tellus ornare sed consequat diam elementum. Quisque tincidunt aliquam justo, eu volutpat odio tempus nec. Fusce semper...</p>
       <a class="read-more" href="#readmore">Read More</a> </div>
     <div id="mid">
       <h2 id="mid-heading">Latest Projects</h2>
       <img src="static/img/mid_latest01.png" width="310" height="173" alt="Devise Function" />
-      <p>Integer nec augue ac est semper pulvinar. Aenean luctus, leo in tincidunt mattis, enim diam convallis tellus, in vulputate enim tortor quis nisl. Curabitur nibh magna,</p>
-      <a class="read-more" href="#readmore">Read More</a> <img src="static/img/mid_latest02.png" width="310" height="173" alt="Latest 02" />
+      <p>Some screenshots of appications when use wxPython library</p>
+      <a class="read-more" href="/screenshots/">Read More</a> <img src="static/img/mid_latest02.png" width="310" height="173" alt="Latest 02" />
       <p>Integer nec augue ac est semper pulvinar. Aenean luctus, leo in tincidunt mattis, enim diam convallis tellus, in vulputate enim tortor quis nisl. Curabitur nibh magna,</p>
     </div>
     <div id="right">
