--- a/templates/download.html
+++ b/templates/download.html
@@ -3,7 +3,7 @@
 {% block title %}Download{% endblock %}
 {% block content %}
     <div id="doc">
-    <h2 id="left-heading">Our Services</h2>
+    <h2 id="left-heading">Download</h2>
 
     <p>
         <a name="stable"></a>
