--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -3,7 +3,7 @@
 {% block title %}What is wxPython?{% endblock %}
 {% block content %}
     <div id="doc">
-        <h2 id="left-heading">Our Services</h2>
+        <h2 id="left-heading">About</h2>
 
         <p>
 
