--- a/templates/quotes.html
+++ b/templates/quotes.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div id="doc">
-        <h2 id="left-heading">Our Services</h2>
+        <h2 id="left-heading">Quotes</h2>
         <ul>
 
             <font size="-1" style="font-family: sans-serif;">
