--- a/templates/screenshots.html
+++ b/templates/screenshots.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div id="doc">
-        <h2 id="left-heading">Our Services</h2>
+        <h2 id="left-heading">Screenshots</h2>
 
         <p>
             Here is a screen shot of the "minimal" wxPython application:</p>
