--- a/templates/screenshots.html
+++ b/templates/screenshots.html
@@ -200,7 +200,7 @@
         <hr>
         <p>
 
-            The old <a href="wxpshots.php" target="_top">Screen shots</a> are
+            The old <a href="/screenshots/wxpshots/" target="_top">Screen shots</a> are
             still available too.
         </p>
 
