fixed links, added download section to top menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
   ('/', 'index', 'Home'),
   ('/introduction/', 'introduction', 'About'),
   ('/download/', 'download', 'Download'),
+  ('/screenshots/', 'screenshots', 'Screenshots'),
 ] %}
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
@@ -40,13 +41,12 @@
                                  width="153"
                                  height="60" alt="social media"/>
         <ul id="foot-nav">
-            <li><a href="index.html"><span>Home</span></a></li>
-            <li class="current"><a
-                    href="introduction.html"><span>About</span></a></li>
-            <li><a href="download.html"><span>Download</span></a></li>
-            {#            <li><a href="#portfolio"><span>Portfolio</span></a></li>#}
-            <li><a href="#blog"><span>Blog</span></a></li>
-            <li><a href="#contact"><span>Contact</span></a></li>
+            <li><a href="/"><span>Home</span></a></li>
+            <li><a href="/introduction/"><span>About</span></a></li>
+            <li><a href="/download/"><span>Download</span></a></li>
+            <li><a href="/screenshots/"><span>Screenshots</span></a></li>
+            <li><a href="/blog/"><span>Blog</span></a></li>
+            <li><a href="/contact/"><span>Contact</span></a></li>
         </ul>
         <p id="footer-logo"><a href="#">wxPython</a><span>Copyright &copy;
             2010 Design Instruct. All rights reserved.</span></p>
