--- a/templates/wxpshots.html
+++ b/templates/wxpshots.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% set active_page = 'introduction' %}
+{% set active_page = 'screenshots' %}
 {% block title %}What is wxPython?{% endblock %}
 {% block content %}
     <div id="doc">
