--- a/templates/wxpshots.html
+++ b/templates/wxpshots.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% set active_page = 'screenshots' %}
-{% block title %}What is wxPython?{% endblock %}
+{% block title %}Screenshots{% endblock %}
 {% block content %}
     <div id="doc">
         <h2 id="left-heading">Screenshots</h2>
